# textdb

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  db_benchmark.cpp
db/: CMakeLists.txt  db.cc  db.h
test/: CMakeLists.txt  db_test.cc
